# runebot

./: README.md  pyproject.toml
src/runebot/: candidate.py  getboundingbox.py  importmonsters.py  importscript.py  main-backup.py  main.py  mappings.js  monster_data.json  monster_id_name_element_map.json  monster_id_name_map.json  monsterbox.db  monsterbox2.db  my_monsters.json  rune.py  rune_grading.py  sets.py  tester.py  webscrape.py
